--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,7 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <div class="post-subtitle">
-    <span class="post-date">{{ page.date | date_to_html_string }}</span>
-    <span class="post-categories">{{ page.categories | category_links }}</span>
-  </div>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
 
@@ -19,7 +16,7 @@ layout: default
         <h3>
           <a href="{{ post.url }}">
             {{ post.title }}
-            <small>{{ post.date | date_to_html_string }}</small>
+            <small>{{ post.date | date_to_string }}</small>
           </a>
         </h3>
       </li>
